--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link rel="stylesheet" href="css/nav-style.css">
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" media="print" href="print.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" media="print" href="css/print.css">
 </head>
 
 <body>
@@ -25,8 +25,8 @@
             </span>
             <a href="#header" class="logo">
                 <div class="logo-container">
-                    <img class="logo" src="images/logo-1913689.svg" alt="Company Logo">
-                    <h1 class="page-title">Web Dev I</h1>
+                    <img class="logo" src="images/CML_logo_2.svg" alt="Company Logo">
+                    <h1 class="page-title">&nbsp;&nbsp;&nbsp;Web Dev I</h1>
                 </div>
             </a>
             <ul class="main-nav" id="js-menu">
