blog post added

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </span>
             <a href="#header" class="logo">
                 <div class="logo-container">
-                    <img class="logo" src="images/CML_logo_2.svg" alt="Company Logo">
+                    <img class="logo" src="images/CML_logo_2.svg" alt="My Logo">
                     <h1 class="page-title">&nbsp;&nbsp;&nbsp;Web Dev I</h1>
                 </div>
             </a>
@@ -46,6 +46,9 @@
                 </li>
                 <li>
                     <a href="#story" class="nav-links">A Story</a>
+                </li>
+                <li>
+                    <a href="#blog" class="nav-links">Blog Post</a>
                 </li>
                 <li>
                     <a href="#contact" class="nav-links">Contact Me</a>
@@ -253,6 +256,17 @@
             </div>
         </article>
         <!-- end of Sherlock Holmes story -->
+        <div class="back-to-top">
+            <a href="#">Back to Top</a>
+        </div>
+        <hr class="mobile-first">
+        <article id="blog" class="blog">
+            <h1>A blog about svg</h1>
+            <div id="blog-body" class="blog-body">
+                <p>Svg is a great new file format to display images. Standing for “Scalable Vector Graphics”, it displays images in a way that the traditional image formats, jpg and png, doesn’t. Where other images map the pixels of an image to a color, svg describes the shapes and colors and lets it draw itself. This gives it huge benefits over jpg and png, one of which being no pixilation. When you zoom in on or enlarge a jpg or png, it gets pixelated. A pixel is a defined detail at a defined size. That detail doesn't adjust itself as the defined size gets larger. So when the image gets larger, more of the monitor's pixels gets assigned the color of, what was before, only one pixel. This is where pixilation comes in. With svg, pixilation does not occur. What svg does is define the shape that appears and lets the browser draw it. Since the browser creates the shape based on the description, it never gets pixelated. The logo at the top of this page is an svg, as well as the tab icon.</p>
+                <p>There are still some limits to it, however, and will not be outright replacing jpg and png. The svg format does not handle pictures well. Converting to svg requires analyzing the picture and creating a new description for each unique shape it detects. A clown at a carnival or a sunlit forest, sunbeams gracing the floor, is easier for jpg or png than it is for svg. Especially with all the subtle color changes that would be going on.</p>
+            </div>
+        </article>
     </main>
     <!-- end of main content -->
     <div class="back-to-top">
